z-index fixes

--- a/src/components/brand-portfolio/sass/brand-portfolio.scss
+++ b/src/components/brand-portfolio/sass/brand-portfolio.scss
@@ -869,7 +869,7 @@ footer {
 }
 
 div#tech-main-header.sticky {
-    z-index: 9999;
+    z-index: 999999;
 }
 
 a:hover, a:focus {
